Resolve alignment issues with modal object

--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -19,6 +19,7 @@ $DBmodal-background-alt: color(gray, x-light) !default;
   display: flex;
   align-items: center;
   align-content: center;
+  justify-content: center;
 
   background-color: color(gray, dark, .6);
 }
